--- a/css/style.css
+++ b/css/style.css
@@ -143,9 +143,22 @@ summary::-webkit-details-marker{
 }
 .nav{
   width: 200px;
-  position: absolute;
+  /* position: absolute;
   top: 100px;
-  left: 200px;
+  left: 200px; */
+  /* border: 1px solid red; */
+  position: sticky;
+  top: -5px;
+}
+header{
+  /* position: sticky;
+  top: 0; */
+  position: absolute;
+  top: -5px;
+  left: -300px;
+  border: 1px so/lid red;
+  width: 200px;
+
 }
 .hr-max-screen{
   margin: 64px 0px 64px 0px;
